# Visualization

./: .gitignore  CMakeLists.txt  README  TODO
Shaders/: Raycasting.cg  raycasting_shader.cg
src/: CMakeLists.txt  main.cpp
src/cmdline/: CMakeLists.txt
src/vis/: CMakeLists.txt  NrrdViewer.cpp  NrrdViewer.h  NrrdVolumeViewer.cpp  NrrdVolumeViewer.h  RaycastingViewer.cpp  RaycastingViewer.h  Sampler.cpp  Sampler.h  TextureConfigurator_Nrrd.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h  nrrdGLutils.cpp  nrrdGLutils.h
src/widget/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  QPixmapFactory.cpp  QPixmapFactory.h
